# mswp

./: CITATION.cff  README.md  pyproject.toml
src/mswp/: __init__.py  mswp.py
src/tidy/: __init__.py  tidy.py
